# logic-pro-discord-rpc

./: .gitignore  CMakeLists.txt  LICENSE  MyApp  README.md  app.cpp  app.h  checkapp  checklogic  engine.cpp  engine.h  logiccheck.cpp  logiccheck.h  logiccheck.mm  main.mm  projectname.cpp  projectname.h  token_store.cpp  token_store.h
